k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pacman-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pacman-backend
  template:
    metadata:
      labels:
        app: pacman-backend
    spec:
      containers:
        - name: backend
          image: pacman-backend
          imagePullPolicy: Never
          ports:
            - containerPort: 5050
---
apiVersion: v1
kind: Service
metadata:
  name: pacman-backend
spec:
  type: LoadBalancer
  selector:
    app: pacman-backend
  ports:
    - protocol: TCP
      port: 5050
      targetPort: 5050
