k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pacman-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pacman-frontend
  template:
    metadata:
      labels:
        app: pacman-frontend
    spec:
      containers:
        - name: frontend
          image: pacman-frontend
          imagePullPolicy: Never
          ports:
            - containerPort: 1234
---
apiVersion: v1
kind: Service
metadata:
  name: pacman-frontend
spec:
  type: NodePort
  selector:
    app: pacman-frontend
  ports:
    - protocol: TCP
      port: 1234
      targetPort: 1234
      nodePort: 31234
